chore(app): add prettier

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-grand-slam-client",
+  "name": "next-grand-slam",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
