--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@apollo/react-hooks": "3.1.3",
+    "@types/use-persisted-state": "0.3.0",
     "apollo-boost": "0.4.7",
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
